# football

./: .gitignore  README.md  stub.txt
cons/: Cargo.toml
cons/src/: lib.rs
dc/: Cargo.toml  ReadMe.txt
dc/dev/: config.json
dc/src/: lib.rs  main.rs
export/: Cargo.toml
export/dev/: config.json
export/src/: main.rs
game/: Cargo.toml
game/src/: lib.rs  main.rs
game/tests/: lib.rs
picker/: Cargo.toml
picker/src/: lib.rs  main.rs
protocol/dev/: config.json
protocol/src/: lib.rs  main.rs
report/: Cargo.toml
report/dev/: config.json
report/examples/: date_report.rs
report/src/: lib.rs  main.rs
scheduler/: Cargo.toml
scheduler/dev/: config.json
scheduler/examples/: dlt_term.rs  export.rs  fixbalance.rs  jcc_draw_info.rs  jcl_draw_info.rs  pls_term.rs  rebonus.rs  report.rs
scheduler/src/: bonus.rs  draw_jcc.rs  draw_jcl.rs  get_jcl_draw_info.rs  jcc_draw_info.rs  lib.rs  main.rs
server/: Cargo.toml
server/dev/: config.json
server/src/: lib.rs  main.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/ment/: admin_account.rs  admin_center.rs  admin_company.rs  admin_doc.rs  admin_game.rs  admin_report.rs  admin_terminal.rs  admin_ticket.rs  center.rs  company.rs  company_ticket.rs  mod.rs  terminal.rs
service/src/sv_util/: get_dn.rs  get_jcc_draw_info.rs  mod.rs
sev_helper/: .project  Cargo.toml
sev_helper/dev/: config.json
sev_helper/src/: lib.rs  main.rs
util/src/: lib.rs  main.rs
util/tests/: lib.rs
web/: Cargo.toml
web/admin/: config.json
web/dev/: config.json
web/src/: main.rs
(+149 files in other folders)
