[package]
name = "sev_helper"
version = "0.0.1"
authors = ["ming li"]

[dependencies]
rustc-serialize = "0.3.16"
time = "0.1"
regex = "0.1"
log = "0.3.5"
chrono = "0.2.20"

redis = { git = "https://github.com/mitsuhiko/redis-rs.git" }
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs.git" }
easydb = {git = "https://limitee:20131988lm@github.com/limitee/easydb.git"}
easy_util = {git = "https://limitee:20131988lm@github.com/limitee/easy_util.git"}
dc = {version="0.0.1", path="../dc"}
elog = {version="0.0.1", path="../elog"}
util = {version="0.0.1", path="../util"}
cons = {version="0.0.1", path="../cons"}
game = {version="0.0.1", path="../game"}